--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 
   <title>Tip Calculator app</title>
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
+
+  <!-- external stylesheet -->
+  <link rel="stylesheet" href="public/css/main.css">
 </head>
 <body>
   <header>
@@ -16,7 +24,7 @@
   <main class="card">
     <div class="bill">
       <label for="bill" class="bill__title">Bill</label>
-      <input id="bill" class="bill__input input-number" type="number">
+      <input id="bill" class="bill__input input-number" type="number" value="140.00">
     </div>
 
     <div class="tip">
@@ -25,7 +33,7 @@
       <div class="tip__grid">
         <div class="btn btn--small">5%</div>
         <div class="btn btn--small">10%</div>
-        <div class="btn btn--small">15%</div>
+        <div class="btn btn--small btn--active">15%</div>
         <div class="btn btn--small">25%</div>
         <div class="btn btn--small">50%</div>
         <input id="tip" class="tip__input input-number input-number--small" type="number" placeholder="Custom">
@@ -33,10 +41,12 @@
     </div>
 
     <div class="no-of-people">
-      <label for="no-of-people" class="no-of-people__title">Number of People</label>
-      <div>
-        <input id="no-of-people" class="no-of-people__input input-number input-number--warning" type="number">
+      <label for="no-of-people" class="no-of-people__title">
+        Number of People
         <span class="warning">Can't be zero</span>
+      </label>
+      <div>
+        <input id="no-of-people" class="no-of-people__input input-number" type="number" value="1">
       </div>
     </div>
 
