Completed desktop design

--- a/index.html
+++ b/index.html
@@ -51,25 +51,27 @@
     </div>
 
     <div class="result">
-      <div class="result__tip-amount">
-        <h2>
-          Tip Amount
-          <span>/ person</span>
-        </h2>
+      <div class="result__amount">
+        <div class="result__amount-tip">
+          <h2>
+            Tip Amount
+            <span>/ person</span>
+          </h2>
 
-        <p class="amount">
+          <p class="amount">
           $<span>0.00</span>
-        </p>
-      </div>
-      <div class="result__total">
-        <h2>
-          Total
-          <span>/ person</span>
-        </h2>
+          </p>
+        </div>
+        <div class="result__amount-total">
+          <h2>
+            Total
+            <span>/ person</span>
+          </h2>
 
-        <p class="amount">
+          <p class="amount">
           $<span>0.00</span>
-        </p>
+          </p>
+        </div>
       </div>
 
       <div class="btn btn--primary">
